<?xml version="1.0"?>
<package>
  <name>ackermann_utils</name>
  <version>0.0.0</version>
  <description>The ackermann_utils package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>


  <license>BSD</license>


  <author email="namniart@gmail.com">Austin Hendrix</author>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
